--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,5 +1,6 @@
 .header {
     padding: 10px 20px;
+    background-color: var(--white-nav);
     box-shadow: var(--box-shadow-nav);
     img {
         width: 145px;
