--- a/src/assets/styles/_utils.scss
+++ b/src/assets/styles/_utils.scss
@@ -34,6 +34,10 @@
     margin: 20px;
   }
   
+  .mb-10 {
+    margin-bottom: 10px;
+  }
+
   .mb-20 {
     margin-bottom: 20px;
   }
@@ -47,4 +51,14 @@
     max-width: 1200px;
     margin: auto;
     width: 100%;
+  }
+
+  // class sur HeaderMenu : le menu déroulé disparaît quand on clic en dehors 
+  .calc {
+    position: fixed;
+    // background-color: red;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
   }
