--- a/src/components/Content.module.scss
+++ b/src/components/Content.module.scss
@@ -1,3 +1,5 @@
+@use '../assets/styles/mixins' as mixin;
+
 .grid {
     display: grid;
     place-content: center;
@@ -7,8 +9,21 @@
     will create implicit grid tracks.  */
 
     gap: 20px; // espace entre éléments de la grille
+    @include mixin.lg-lt{
+      grid-template-columns: repeat(2, 350px);
+      grid-auto-columns: repeat(2, 350px); 
+    }
+    @include mixin.md-lt{
+      grid-template-columns: 350px;
+      grid-auto-columns: 350px; 
+    }
+    @include mixin.xs{
+      grid-template-columns: 1fr;
+      grid-auto-columns: 1fr; 
+    }
   }
   
   .contentCard {
-    width: 1130px;
+    max-width: 1130px;
+    width: 100%;
   }
