--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -24,4 +24,12 @@ body {
   img {
     max-width: 100%;
   }
+
+  input {
+    font-family: var(--font-family);
+  }
+
+  ::placeholder {
+    font-family: var(--font-family);
+  }
   
